<resources>
    <string name="app_name">Unilocal</string>
    <string name="txt_ingrese_correo">Ingrese su correo</string>
    <string name="txt_ingrese_contrasenia">Ingrese su contraseña</string>
    <string name="btn_login">Login</string>
    <string name="lbl_inicia_con">O inicia con</string>
    <string name="btn_goole">Google</string>
    <string name="lbl_registro">Todavía no tienes una cuenta</string>
    <string name="lbl_password">¡Olvidaste tu contraseña?</string>
    <string name="lbl_registrate">Regístrate aquí</string>
    <string name="lbl_iniciar_sesion">Iniciar sesión</string>
    <string name="lbl_recuperar">Recuperala aquí</string>
    <string name="txt_bienvenido" translatable="false">¡Bienvenid@!</string>
    <string name="txt_nombre" translatable="false">Nombre</string>
    <string name="txt_nickname" translatable="false">Usuario</string>
    <string name="txt_ciudad" translatable="false">Ciudad de residencia</string>
    <string name="txt_registrarse_btn" translatable="false">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nickname">NickName</string>
    <string name="Correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="seis_caracteres_minimo" translatable="false">Mínimo 6 caracteres</string>
    <string name="confimarContrasenia">Confirmar contraseña</string>
    <string name="numCelular">Número de teléfono</string>
    <string name="ciudad">Ciudad</string>
    <string name="btn_registro">Registrar</string>
    <string name="hora_de_inicio">Hora de inicio</string>
    <string name="hora_de_cierre">Hora de cierre</string>
    <string name="martes">Martes:</string>
    <string name="lunes">Lunes:</string>
    <string name="miercoles">Miercoles</string>
    <string name="nombre_del_lugar">Nombre del Lugar</string>
    <string name="direccion">Dirección:</string>
    <string name="ingrese_la_direccion">Ingrese la dirección</string>
    <string name="telefono">Teléfono:</string>
    <string name="ingrese_el_telefono">Ingrese el teléfono</string>
    <string name="viernes">Viernes</string>
    <string name="guardar_lugar">Guardar Lugar</string>
    <string name="jueves">Jueves</string>
    <string name="informacion_personal">Información personal</string>
    <string name="notificacion">Notificación</string>
    <string name="mis_lugares">Mis lugares</string>
    <string name="guardados">Guardados</string>
    <string name="editar">editar</string>
    <string name="perfil_usuario">Perfil usuario</string>
    <string name="ir_a_login">Ir a login</string>
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="maximo_caracteres">Máximo 10 caracteres</string>
    <string name="datos_correctos">Los datos son correctos</string>
    <string name="datos_incorrectos">Los datos son incorrectos</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="registrado_exitosamente">Registrado exitosamente</string>
    <string name="no_se_pudo_registrar">No se pudo registrar</string>
    <string name="la_contrasena_ingresada_no_coincide">La contraseña ingresada no coincide</string>
    <string name="lugares">Lugares</string>
    <string name="registro" translatable="false">Registro</string>
    <string name="historial">Historial</string>
    <string name="no_tiene_telefonos_contac">No tiene telefonos de contacto</string>
    <string name="txt_abierto">Abierto</string>
    <string name="cierra_a_las">Cierra a las</string>
    <string name="cerrado">Cerrado</string>
    <string name="descripcion">Descripción</string>
    <string name="resenas">Reseñas</string>
    <string name="fotos">Fotos</string>
    <string name="txt_crear_lugar">Crear lugar</string>
    <string name="txt_nombre_lugar">Nombre del lugar</string>
    <string name="txt_descripcion_lugar">Descripción del lugar</string>
    <string name="txt_direccion_lugar">Dirección del lugar</string>
    <string name="txt_telefono_lugar">Teléfono del lugar</string>
    <string name="txt_imagenes" translatable="false">Imagenes</string>
    <string name="txt_btn_crear_lugar">Crear lugar</string>
    <string name="crear_lugar_hint_divider">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_horario">Horario</string>
    <string name="txt_seleccione">Seleccione</string>
    <string name="lugar_creado_error" translatable="false">Hubo un error al crear el lugar</string>
    <string name="lugar_creado_imagenes_error" translatable="false">Por favor seleccione al menos una imágen</string>
    <string name="txt_estado">ESTADO</string>
    <string name="txt_restaurante">Restaurante</string>
    <string name="txt_hotel">Hotel</string>
    <string name="txt_centro_comercial">Centro comercial</string>
    <string name="txt_tienda">Tienda</string>
    <string name="txt_bar">Bar</string>
    <string name="txt_cafe">Café</string>
    <string name="txt_parque">Parque</string>
    <string name="txt_museo">Museo</string>
    <string name="txt_recientes">Recientes</string>
    <string name="txt_reciente">Reciente</string>
    <string name="icon_uf0ac">\uf0ac</string>
    <string name="icon_uf095">\uf095</string>
    <string name="icon_reloj">\uf05a</string>
    <string name="icon_uf2e7">\uf2e7</string>
    <string name="icon_uf594">\uf594</string>
    <string name="icon_uf54e">\uf54e</string>
    <string name="icon_uf07a">\uf07a</string>
    <string name="icon_uf0fc">\uf0fc</string>
    <string name="icon_uf7b6">\uf7b6</string>
    <string name="icon_uf1bb">\uf1bb</string>
    <string name="icon_uf66f">\uf66f</string>
    <string name="icon_uf017">\uf017</string>
    <string name="icon_uf1f8">\uf1f8</string>
    <string name="icon_uf058">\uf058</string>
    <string name="icon_uf057">\uf057</string>
    <string name="icon_uf359">\uf359</string>
    <string name="icon_uf005">\uf005</string>
    <string name="icon_uf3c5" translatable="false">\uf3c5</string>
    <string name="txt_detalles">Detalles</string>
    <string name="txt_detalles_del_lugar">Detalles del lugar</string>
    <string name="txt_horarios">Horarios</string>
    <string name="txt_cerrado">Cerrado</string>
    <string name="txt_lunes">Lunes</string>
    <string name="txt_martes">Martes</string>
    <string name="txt_miercoles">Miércoles</string>
    <string name="txt_jueves">Jueves</string>
    <string name="txt_viernes">Viernes</string>
    <string name="txt_sabado">Sábado</string>
    <string name="txt_domingo">Domingo</string>
    <string name="txt_no_abre">No abre</string>
    <string name="txt_contacto">Contacto</string>
    <string name="txt_contacto_del_lugar">Contacto del lugar</string>
    <string name="txt_categoria">Categoría</string>
    <string name="txt_categoria_del_lugar">Categoría del lugar</string>
    <string name="txt_moderar">Administrador</string>
    <string name="txt_busqueda">Buscar Lugar</string>
    <string name="txt_mis_lugares">Mis Lugares</string>
    <string name="txt_mis_favoritos">Mis favoritos</string>
    <string name="txt_calificacion">Calificacion</string>
    <string name="txt_0">0</string>
    <string name="txt_comentarios">Comentarios</string>
    <string name="txt_seleccione_un_nivel_de_calificacion">Seleccione un nivel de calificacion</string>
    <string name="txt_comentar">Ingresa comentario</string>
    <string name="txt_describa_su_experiencia_en_este_lugar">Describa su experiencia aqui</string>
    <string name="txt_enviar">Enviar</string>
    <string name="comentario_enviado">Comentarios enviado</string>
    <string name="no_se_pudo_enviar_comentario">No se puedo envia el comentario</string>
    <string name="txt_calificar">Calificar</string>
    <string name="no_puede_agregar_mas_de_un_comentario">No se puede agregar mas de un comentario</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="horario_de_lunes_no_valido">horario de lunes no valido</string>
    <string name="horario_de_martes_no_valido">Horario martes no valido</string>
    <string name="horario_de_miercoles_no_valido">Horario miercoles no valido</string>
    <string name="horario_de_jueves_no_valido">Horario Jueves no valido</string>
    <string name="horario_de_viernes_no_valido">Horario Viernes no valido</string>
    <string name="horario_de_sabado_no_valido">Horario sabado no valido</string>
    <string name="horario_de_domingo_no_valido">Horario domigno no valido\n</string>
    <string name="lugar_creado_rev_mod">Lugar creado</string>
    <string name="txt_nombre_usuario">nombre usuario</string>
    <string name="txt_fecha">fecha</string>
</resources>