<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".actividades.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/lbl_iniciar_sesion"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/txt_ingrese_correo"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_ingrese_contrasenia"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/btn_login"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textOiniciaCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/lbl_inicia_con"
                android:textColor="#757575"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonGoogleLogin"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/btn_goole" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_registro"
                    android:textColor="#757575"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_register_here"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/lbl_registrate"
                    android:textSize="12sp"
                    android:textColorLink="@color/azul_oscuro"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_password"
                    android:textColor="#757575"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_forgot_password"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/lbl_recuperar"
                    android:textSize="12sp"
                    android:textColorLink="@color/azul_oscuro"
                    android:textStyle="bold|italic"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
