<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/app_name"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginBottom="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Correo"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasenia"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenia"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confimarContrasenia"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confimarContrasenia"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numCelular"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numCelular"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ciudad"/>

            <!-- Botón de Registro -->
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple"
                android:text="@string/btn_registro"
                />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>