<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="7dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100">

        <ImageView
            android:id="@+id/img_lugar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nombre_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_lugar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/dark_green"
                    android:text="@string/txt_estado"
                    android:layout_marginEnd="10dp" /> <!-- Agregando margen entre estado y estado_ic -->

                <TextView
                    android:id="@+id/estado_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/dark_green"
                    android:text="@string/icon_uf017"
                    android:textSize="25sp"
                    android:fontFamily="@font/font_awesome_6_free_solid_900"
                    android:layout_alignParentEnd="true"/>
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
